--- a/index.html
+++ b/index.html
@@ -6,10 +6,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Of Hrc</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <Section id="header">
+        <div class="header-part">
+            <h1>Welcome to </h1>
+            <h1> <span class="name-color">Humayun Rashid</span> World!</h1>
+            <h2>Full Stack Web Development With JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, accusantium architecto quaerat
+                culpa soluta eum corrupti repudiandae voluptas nulla reiciendis laborum et ipsa ab nihil impedit
+                recusandae laudantium quasi obcaecati necessitatibus? Deserunt, itaque ut blanditiis iusto vel non, amet
+                reprehenderit, velit magni ex in quidem quisquam totam! Beatae iusto modi tempore sit, impedit eveniet
+                enim earum autem rem, ipsa eligendi architecto ducimus, atque cum quos esse! Enim obcaecati praesentium
+                exercitationem!</p>
 
+            <a class="button" href="https://www.facebook.com/hrchumain">Hire Me</a>
+        </div>
+        <div class="header-part">
+            <img src="images/img1.png" alt="Header Photo">
+        </div>
+    </Section>
+
+    <section id="dream-area">
+        <div class="dream-part">
+            <img src="images/img2.png" alt="Background Image">
+        </div>
+        <div class="dream-part">
+            <h1>What is my Speciality?</h1>
+            <h1>Become a web Developer!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quos ea ut nobis sunt tempora voluptatem
+                beatae, aperiam est quaerat eum optio animi iusto excepturi veritatis blanditiis modi voluptatibus
+                asperiores cum ipsa in magni aliquam quidem adipisci. Fugit, deleniti omnis.Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Illo quos ea ut nobis sunt tempora voluptatem
+                beatae, aperiam est quaerat eum optio animi iusto excepturi veritatis blanditiis modi voluptatibus
+                asperiores cum ipsa in magni aliquam quidem adipisci. Fugit, deleniti omnis.
+            </p>
+            <a class="button2" href="https://www.facebook.com/hrchumain">More about me</a>
+        </div>
+    </section>
+    <section id="skill">
+        <h1>Experience</h1>
+        <div class="skill-div">
+            <div id="div1">
+                <h2>Full Stack Web Development</h2>
+                <h3>Experience in JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quasi consequuntur quaerat, illum
+                    nesciunt fugit voluptate distinctio nulla qui doloremque magnam, veniam et. Consequuntur eaque
+                    architecto minus nobis placeat perspiciatis consequatur libero facere voluptatem ipsum commodi iusto
+                    quam, nihil maiores eveniet possimus, numquam nostrum quisquam reprehenderit voluptatibus? Ea, dicta
+                    illo?</p>
+            </div>
+
+            <div id="div2">
+                <h2>Little Web Developer</h2>
+                <h3>Experience in Html and Css</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quasi consequuntur quaerat, illum
+                    nesciunt fugit voluptate distinctio nulla qui doloremque magnam, veniam et. Consequuntur eaque
+                    architecto minus nobis placeat perspiciatis consequatur libero facere voluptatem ipsum commodi iusto
+                    quam, nihil maiores eveniet possimus, numquam nostrum quisquam reprehenderit voluptatibus? Ea, dicta
+                    illo?</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p class="foot">Proffesional Portfolio Website &COPY; by Humayun 2022</p>
+    </footer>
 </body>
 
 </html>
