--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="Humayun, Web Design, Web Development, Developer, Javascript">
+    <meta name="description" content="The website provide you to introduce to a web developer">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Portfolio Of Hrc</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
